@@ -13,6 +13,7 @@ EXPORTS
     rb_cCairo_FontFace        DATA
     rb_cCairo_FontExtents     DATA
     rb_cCairo_FontOptions     DATA
+    rb_cCairo_ScaledFont      DATA
     rb_cCairo_TextExtents     DATA
     rb_cCairo_Glyph           DATA
     rb_cCairo_Surface         DATA
@@ -27,9 +28,11 @@ EXPORTS
     rb_cairo_font_face_from_ruby_object
     rb_cairo_font_face_to_ruby_object
     rb_cairo_font_extents_from_ruby_object
+    rb_cairo_font_extents_to_ruby_object
     rb_cairo_font_options_to_ruby_object
     rb_cairo_font_options_from_ruby_object
-    rb_cairo_font_extents_to_ruby_object
+    rb_cairo_scaled_font_to_ruby_object
+    rb_cairo_scaled_font_from_ruby_object
     rb_cairo_text_extents_from_ruby_object
     rb_cairo_text_extents_to_ruby_object
     rb_cairo_glyph_from_ruby_object
