@@ -21,9 +21,10 @@ extern void Init_cairo_surface (void);
 extern void Init_cairo_constants (void);
 extern void Init_cairo_exception (void);
 extern void Init_cairo_font (void);
-extern void Init_cairo_text_extents (void);
 extern void Init_cairo_font_extents (void);
 extern void Init_cairo_font_options (void);
+extern void Init_cairo_scaled_font (void);
+extern void Init_cairo_text_extents (void);
 extern void Init_cairo_pattern (void);
 extern void Init_cairo_glyph (void);
 
@@ -41,6 +42,7 @@ Init_cairo ()
   Init_cairo_font ();
   Init_cairo_font_extents ();
   Init_cairo_font_options ();
+  Init_cairo_scaled_font ();
   Init_cairo_text_extents ();
   Init_cairo_pattern ();
   Init_cairo_glyph ();
